src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSync_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSync_StringErrorContext.class */
public final class GLXSGIVideoSync_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXGetVideoSyncSGI(J)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSyncErrorContext");
        methods.put("glXGetVideoSyncSGI(Ljava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSyncErrorContext");
        methods.put("nglXWaitVideoSyncSGI(IIJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSyncErrorContext");
        methods.put("glXWaitVideoSyncSGI(IILjava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSyncErrorContext");
        methods.put("glXGetVideoSyncSGI([I)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSyncErrorContext");
        methods.put("glXWaitVideoSyncSGI(II[I)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIVideoSyncErrorContext");
        return methods;
    }
}
